[tool.poetry]
name = "unicycle"
version = "0.0.1"
description = "Predictable, unidirectional state store for Python."
authors = ["Mike Cousins <mike@cousins.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mcous/unicycle"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
anyio = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
coverage = { extras = ["toml"], version = "^6.3.2" }
flake8 = "^4.0.1"
flake8-annotations = "^2.7.0"
flake8-docstrings = "^1.6.0"
flake8-noqa = "^1.2.1"
flake8-bugbear = "^22.1.11"
mypy = "^0.982"
pytest = "^7.1.1"
pytest-xdist = "^2.5.0"
pytest-clarity = "^1.0.1"
trio = "^0.20.0"
typing-extensions = "^4.1.1"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
addopts = "--color=yes"

[tool.mypy]
files = ["unicycle", "tests"]
strict = true
show_error_codes = true

[tool.coverage.report]
exclude_lines = ["@overload", "if TYPE_CHECKING:"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
